--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,37 @@
-aiohttp==3.8.6
-aiosignal==1.3.1
-annotated-types==0.6.0
-async-timeout==4.0.3
-attrs==23.1.0
-blinker==1.6.2
-certifi==2023.7.22
-charset-normalizer==3.3.0
-click==8.1.7
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+async-timeout==5.0.1
+attrs==25.1.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
-Flask==2.3.3
-Flask-Cors==4.0.0
-frozenlist==1.4.0
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-multidict==6.0.4
-openai==0.28.1
-pydantic==2.6.4
-pydantic_core==2.16.3
-python-dotenv==1.0.0
-requests==2.31.0
-tqdm==4.66.1
-typing_extensions==4.8.0
-urllib3==2.0.6
-Werkzeug==2.3.7
-yarl==1.9.2
+distro==1.9.0
+Flask==3.1.0
+Flask-Cors==5.0.0
+frozenlist==1.5.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+jiter==0.8.2
+MarkupSafe==3.0.2
+multidict==6.1.0
+openai==1.62.0
+propcache==0.2.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-dotenv==1.0.1
+requests==2.32.3
+sniffio==1.3.1
+tqdm==4.67.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+Werkzeug==3.1.3
+yarl==1.18.3
